--- a/public/README.asciidoc
+++ b/public/README.asciidoc
@@ -76,4 +76,7 @@ to start Neo4j.
 
 == Licensing ==
 
-Neo4j is an open source product. We support a Community edition under the GPLv3 license. The Enterprise edition is available under the AGPLv3 license for open source projects otherwise under a commercial license from https://info.neotechnology.com/contactus.html[Neo Technology].
+Neo4j Community Edition is an open source product licensed under GPLv3.
+Neo4j Enterprise Edition expands the functionality of Community Edition with Enterprise-grade features.
+Neo4j Enterprise consists of modules from Neo4j Community Edition and modules licensed under AGPLv3 with the Commons Clause in this repository, and other closed source components not present in this repository.
+When packaged as a binary, Enterprise Edition includes additional closed-source components _not available in this repository_ and requires a commercial license from Neo4j Sweden AB or one of its affiliates.
